내정보 수정중

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://mdjoo0810.github.io/"
 languageCode = "ko"
 title = "Aaron Tech Blog"
 theme = "anatole"
